--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>To Do List</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
-    <script src="script.js"></script>  
   </head>
-  <body onload="doIt()">
+  <body>
     <div class="todo">
       <div class="todo-container">
         <h1>Todo</h1>
@@ -22,5 +21,6 @@
         <ul id="todo"></ul>
       </div>
     </div>
+    <script src="script.js"></script>  
   </body>
 </html>
